Doc/force-app/main/default/objects/Subscription_Snapshot__c/Subscription_Snapshot__c.object-meta.xml
<CustomObject>
    <description>This is a monthly snapshot of all Subscriptions</description>
    <label>Product Customer Snapshot</label>
    <nameField>
        <label>Subscription Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Customer Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>