Doc/force-app/main/default/objects/Subscription_Snapshot__c/fields/Account_CSM_Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM_Health_Rating__c</fullName>
    <description>This field captures the csm health rating of the account record</description>
    <inlineHelpText>This field captures the csm health rating of the account record</inlineHelpText>
    <label>Account CSM Health Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>