Doc/force-app/main/default/objects/Subscription_Snapshot__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <label>Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>