Doc/force-app/main/default/objects/Subscription_Snapshot__c/fields/CSM_Health_Rating_Previous__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Rating_Previous__c</fullName>
    <description>Product Customer - CSM Health Rating - previous field value</description>
    <inlineHelpText>Product Customer - CSM Health Rating - previous field value</inlineHelpText>
    <label>CSM Health Rating - Previous</label>
    <length>255</length>
    <type>Text</type>
</CustomField>