Doc/force-app/main/default/objects/Subscription_Snapshot__c/fields/Customer_Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifecycle_Stage__c</fullName>
    <label>Product Implementation Phase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>