Doc/force-app/main/default/objects/Subscription_Snapshot__c/fields/Lawyers__c.field-meta.xml
<CustomField>
    <fullName>Lawyers__c</fullName>
    <label>Lawyers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>