Doc/force-app/main/default/objects/Subscription_Snapshot__c/fields/Total_Recurring_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Recurring_Amount__c</fullName>
    <label>Total Recurring Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>